# Extermination

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  changelog.md  cmake_install.cmake  custom-instructions.md  test.txt
.github/workflows/: makefile.yml
Makefiles/: default_vars.mk
Tools/: README.md
assets/images/player/: PlayerHealth.aseprite
assets/maps/: 163501584986.map
assets/scripts/: DefaultBindings.cfg  DefaultConsoleBindings.cfg  UserBindings.cfg
assets/shaders/: post-effects.frag
assets/textures/: Button_01.aseprite  Coin.aseprite  Dog.aseprite  Grate.aseprite
assets/textures/Base/: Base-health.aseprite
includes/: Actions.hpp  Game.hpp
includes/States/: Menu.hpp  StateFactory.hpp  States.hpp
includes/States/Game/: Game.hpp
includes/States/Menu/: Menu.hpp
includes/States/Options/: Options.hpp
includes/States/Splash/: Splash.hpp
src/: Actions.cpp  Actions.hpp  Game.cpp  GameApplication.cpp  GameApplication.hpp  main.cpp
src/AI/: AIState.cpp  AIState.hpp
src/States/: Menu.cpp  StateFactory.hpp  States.hpp
src/States/Game/: Config.cpp  Config.hpp  Console.cpp  Console.hpp  ConsoleCommands.cpp  Game.cpp  Game.hpp  InitGame.cpp  Statistics.cpp  Statistics.hpp
src/States/Game/HUD/: HUD.cpp  (+1 more)
src/States/Menu/: InitMenu.cpp  Menu.cpp  Menu.hpp
src/States/Options/: InitControlsOptions.cpp  InitGraphicsOptions.cpp  InitOptions.cpp  Options.cpp  Options.hpp
src/States/Splash/: Splash.cpp  Splash.hpp
src/Utils/: AddHoverEffect.cpp  Utils.hpp  playClickSound.cpp
(+96 files in other folders)
